# GraFiCA

./: README.md  commMatricesTxT.m
helpers/: normadj.m
matlab/: CommDetec.m  GraFiCA.m  commMatricesTxT.m
matlab/examples/: demo_real.m  demo_synthetic.m
python/: pyproject.toml
python/examples/: tutorial.py
python/src/grafica/: __init__.py  cluster_matrices.py  community.py  filtering.py
python/tests/: conftest.py  test_cluster_matrices.py  test_community.py  test_filtering.py  test_utils.py
